Fix spinner in reporter from being cut off during test run

--- a/packages/reporter/src/runnables/runnables.scss
+++ b/packages/reporter/src/runnables/runnables.scss
@@ -81,6 +81,7 @@
       min-width: 12px;
       height: 18px;
       text-align: center;
+      font-size: 11px;
     }
 
     &.suite .collapsible-indicator  {
